# crop-row-connector

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: docs.yml  publish_pipy.yml  publish_pypi.yml
crop_row_connector/: __main__.py  combine_crop_rows.py
docs/: index.rst  installation.rst
docs/1_tutorials/: index.rst  running_the_test_dataset.rst
docs/2_how_to/: choose_connection_parameters.rst  index.rst  preparing_your_data.rst  using_as_library.rst
docs/3_reference/: api_reference.rst  index.rst
docs/4_explanation/: algorithm_overview.rst  index.rst
docs/source/: CLI.rst  conf.py  contributing.rst  how_to.rst  index.rst  installation.rst  reference.rst  tutorials_guides.rst
docs/source/explanation/: algorithm_overview.rst  index.rst
docs/source/how_to/: choose_connection_parameters.rst  index.rst  preparing_your_data.rst  using_as_library.rst
docs/source/tutorials/: running_the_test_dataset.rst
docs/test_dataset/input/: row_information_global.csv
docs/tutorials/: running_the_test_dataset.rst
rust/: Cargo.toml
rust/src/: lib.rs
src/: lib.rs
src/crop_row_connector/: Hungarian_algorithm.py  __init__.py  __main__.py  combine_crop_rows.py  combine_crop_rows_from_connections.py  find_connection_of_rows_between_two_tiles.py
tests/: test_hungarian_algorithm.py
