[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "crop-row-connector"
version = "0.1.0"
description = "Python scripts for crop-row-connector"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Crop Row Connector maintainers", email = "devnull@example.com" }
]
license = { text = "BSD-3-Clause" }
dependencies = [
    "numpy",
    "opencv-python",
    "pandas",
    "tqdm",
    "matplotlib",
    "pyshp",
]

[tool.maturin]
module-name = "crop_row_connector._native"

[tool.maturin.generate-ci.github]
trusted-publishing = true



[project.scripts]
crop-row-connector = "crop_row_connector.__main__:_main"
