[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "crop-row-connector"
version = "0.1.1"
description = "Python scripts for crop-row-connector"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="Rasmus Storm", email="hde@mmmi.sdu.dk" },
]
maintainers = [
  { name="Henrik Skov Midtiby", email="hemi@mmmi.sdu.dk" },
  { name="Henrik Dyrberg Egemose", email="hde@mmmi.sdu.dk" },
]
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy",
    "opencv-python",
    "pandas",
    "tqdm",
    "matplotlib",
    "pyshp",
]

[tool.maturin]
module-name = "crop_row_connector._native"

[tool.maturin.generate-ci.github]
trusted-publishing = true

[project.scripts]
crop-row-connector = "crop_row_connector.__main__:_main"
