[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "crop-row-connector"
version = "0.2.0"
description = "Connect crop rows together from the output of the python package crop-row-detector."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="Rasmus Storm", email="hde@mmmi.sdu.dk" },
]
maintainers = [
  { name="Henrik Skov Midtiby", email="hemi@mmmi.sdu.dk" },
  { name="Henrik Dyrberg Egemose", email="hde@mmmi.sdu.dk" },
]
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy",
    "opencv-python",
    "pandas",
    "tqdm",
    "matplotlib",
    "pyshp",
]

[tool.maturin]
module-name = "crop_row_connector._native"

[tool.maturin.generate-ci.github]
trusted-publishing = true

[project.scripts]
crop-row-connector = "crop_row_connector.__main__:_main"

[project.urls]
Homepage = "https://github.com/SDU-UAS-Center/crop-row-connector"
Issues = "https://github.com/SDU-UAS-Center/crop-row-connector/issues"

[tool.pytest.ini_options]
addopts = "--cov=crop_row_connector --cov-report html:test_coverage"

[tool.codespell]
check-hidden = true
skip = ".git,venv,*.c"
ignore-words-list = "mor, FPR"

[tool.ruff]
line-length = 120
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "D",
  "E",
  "F",
  "I",
  "PGH",
  "PT",
  "SIM",
  "UP",
]

ignore = [
  # Doc string format currently not used
  "D205",
  "D401",
  # Use ternary operator instead of if/else
  "SIM108",
  # docstring ignores - conflicting rules
  "D203",
  "D212",
  # as recommended by https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "D206",
  "D300",
  "E111",
  "E114",
  "E117",
  "E501",
  # still using D102 since docstring inherited is not supported in ruff"
  "D102",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "D104",
  "F401",
  "F403",
]
"tests/*" = ["D"]
"docs/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "mypy",
    "sphinx<9",
    "myst_parser",
    "furo",
    "sphinx_copybutton",
    "sphinx_reredirects",
    "sphinx-argparse",
    "git-cliff",
]

[tool.git-cliff.changelog]
header = "What's Changed"

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
commit_parsers = [
    { message = "^feat*", group = "<!-- 0 -->New features" },
    { message = "^fix*", group = "<!-- 1 -->Bug fixes" },
    { message = "^refactor*", group = "<!-- 2 -->Code Quality & Refactoring" },
    { message = "^docs*", group = "<!-- 3 -->Documentation" },
    { message = "^test*", group = "<!-- 4 -->New tests" },
    { message = "^perf*", group = "<!-- 5 -->Performance" },
    { message = "^chore*", group = "<!-- 6 -->Miscellaneous" },
]
